--- a/2_dqn_pytorch_lightning.ipynb
+++ b/2_dqn_pytorch_lightning.ipynb
@@ -464,10 +464,11 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
         "id": "Ob3b0psZKLQ3",
-        "outputId": "ca9f1be3-21f7-471f-99d8-9ea73c536e1e"
+        "outputId": "6330cd33-8476-4554-e24c-86fe6b585af7"
       },
-      "execution_count": 50,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
@@ -485,7 +486,14 @@
             "  if not isinstance(terminated, (bool, np.bool8)):\n",
             "/usr/local/lib/python3.11/dist-packages/gym/core.py:43: DeprecationWarning: \u001b[33mWARN: The argument mode in render method is deprecated; use render_mode during environment initialization instead.\n",
             "See here for more information: https://www.gymlibrary.ml/content/api/\u001b[0m\n",
-            "  deprecation(\n"
+            "  deprecation(\n",
+            "/usr/local/lib/python3.11/dist-packages/gym/wrappers/monitoring/video_recorder.py:78: DeprecationWarning: \u001b[33mWARN: Recording ability for environment LunarLander-v2 initialized with `render_mode=None` is marked as deprecated and will be removed in the future.\u001b[0m\n",
+            "  logger.deprecation(\n",
+            "/usr/local/lib/python3.11/dist-packages/gym/core.py:43: DeprecationWarning: \u001b[33mWARN: The argument mode in render method is deprecated; use render_mode during environment initialization instead.\n",
+            "See here for more information: https://www.gymlibrary.ml/content/api/\u001b[0m\n",
+            "  deprecation(\n",
+            "/usr/local/lib/python3.11/dist-packages/gym/wrappers/monitoring/video_recorder.py:78: DeprecationWarning: \u001b[33mWARN: Recording ability for environment LunarLander-v2 initialized with `render_mode=None` is marked as deprecated and will be removed in the future.\u001b[0m\n",
+            "  logger.deprecation(\n"
           ]
         }
       ]
@@ -549,15 +557,61 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 52,
       "metadata": {
         "id": "tOmxUJ1vnY5d"
       },
       "outputs": [],
       "source": [
         "class DeepQLearning(LightningModule):\n",
-        ""
+        "    def __init__(self, env_name, policy=epsilon_greedy, capacity=100_000,\n",
+        "                 batch_size=256, lr=1e-3, hidden_size=128, gamma=0.99,\n",
+        "                 loss_fn=F.smooth_l1_loss, optim=AdamW, eps_start=1.0, eps_end=0.15,\n",
+        "                 eps_last_episode=100, samples_per_epoch=10_000, sync_rate=10):\n",
+        "        super().__init__()\n",
+        "        self.env = create_environment(env_name)\n",
+        "\n",
+        "        obs_size = self.env.observation_space.shape[0]\n",
+        "        n_actions = self.env.action_space.n\n",
+        "\n",
+        "        self.q_net = DQN(hidden_size, obs_size, n_actions)\n",
+        "\n",
+        "        self.target_q_net = copy.deepcopy(self.q_net)\n",
+        "\n",
+        "        self.policy = policy\n",
+        "        self.buffer = ReplayBuffer(capacity=capacity)\n",
+        "\n",
+        "        self.save_hyperparameters()\n",
+        "\n",
+        "        while len(self.buffer) < self.hparams.samples_per_epoch:\n",
+        "            print(f\"{len(self.buffer)} samples in experience buffer. Filling. . .\")\n",
+        "            self.play_episode(epsilon=self.hparams.eps_start)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "    @torch.no_grad\n",
+        "    def play_episode(self, policy=None, epsilon=0):\n",
+        "        state = self.env.reset()\n",
+        "        done = False\n",
+        "\n",
+        "        while not done:\n",
+        "            if policy:\n",
+        "                action = policy(state, self.env, self.q_net, epsilon=epsilon)\n",
+        "            else:\n",
+        "                action = self.env.action_space.sample()\n",
+        "\n",
+        "            next_state, reward, done, info =self.env.step(action)\n",
+        "            exp = (state, action, reward, done, next_state)\n",
+        "            self.buffer.append(exp)\n",
+        "            state = next_state"
+      ],
+      "metadata": {
+        "id": "bbXEibf0YneV"
+      },
+      "execution_count": 53,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
